<resources>
    <string name="app_name">Opin</string>
    <string name="error_title">Woops!</string>
    <string name="add_class_error_message">We were not able to find your classroom. Please verify the code with your teacher.</string>
    <string name="save_add_class_error_message">Looks like we couldn\'t add your class. Please try again later!</string>
    <string name="success_toast_add_class">Class successfully added!</string>
    <string name="title_activity_survey_web_view">Opin Survey</string>
    <string name="add_code_instructions">Please enter the classroom code given to you by your teacher.</string>
    <string name="get_started_header">Let\'s get started!</string>
    <string name="class_code_input_hint">Class Code</string>
    <string name="add_class_button_text">Add Class</string>
    <string name="empty_list_label_text">You\'re all caught up!</string>
    <string name="empty_list_detail_text">We\'ll notify you when a new survey becomes available.</string>
    <string name="lpfi_credit_message">Built in collaboration with the LPFI Organization, Maanasa Kotha, Thomas Flores, and Gabrielle Henry</string>
    <string name="network_unavailable_message">Network unavailable</string>
</resources>
